Create Project model & service

--- a/src/app/projects/containers/list/projects.container.html
+++ b/src/app/projects/containers/list/projects.container.html
@@ -1,1 +1,3 @@
-<p>projects works!</p>
+<div fxLayout="row" fxLayout.xs="column" fxFlexFill fxLayoutGap="20px">
+  <ci-projects-list fxFlex [projects]="projects" [isLoading]="isLoading"></ci-projects-list>
+</div>
