Add notification configurator component

--- a/src/app/projects/containers/details/details.container.html
+++ b/src/app/projects/containers/details/details.container.html
@@ -1,3 +1,4 @@
 <p>details works!</p>
 
 <ci-commands-list [project]="project"></ci-commands-list>
+<ci-notifications-configurator [project]="project"></ci-notifications-configurator>
