Add scheduler component

--- a/src/app/projects/containers/details/details.container.html
+++ b/src/app/projects/containers/details/details.container.html
@@ -2,3 +2,4 @@
 
 <ci-commands-list [project]="project"></ci-commands-list>
 <ci-notifications-configurator [project]="project"></ci-notifications-configurator>
+<ci-scheduler-configurator [project]="project"></ci-scheduler-configurator>
