Add nginx configuration & Dockerfile

--- a/src/app/projects/containers/details/details.container.html
+++ b/src/app/projects/containers/details/details.container.html
@@ -1,5 +1,5 @@
 <p>details works!</p>
 
-<ci-commands-list [project]="project"></ci-commands-list>
+<ci-commands-configurator [project]="project"></ci-commands-configurator>
 <ci-notifications-configurator [project]="project"></ci-notifications-configurator>
 <ci-scheduler-configurator [project]="project"></ci-scheduler-configurator>
