--- a/src/app/projects/containers/details/details.container.html
+++ b/src/app/projects/containers/details/details.container.html
@@ -1,5 +1,5 @@
 <p>details works!</p>
 
-<ci-commands-configurator [project]="project"></ci-commands-configurator>
-<ci-notifications-configurator [project]="project"></ci-notifications-configurator>
-<ci-scheduler-configurator [project]="project"></ci-scheduler-configurator>
+<ci-commands-configurator [project]="project" #commandsConfigurator></ci-commands-configurator>
+<ci-notifications-configurator [project]="project" #notificationsConfigurator></ci-notifications-configurator>
+<ci-scheduler-configurator [project]="project" [inEditMode]="editMode" #schedulerConfigurator></ci-scheduler-configurator>
