--- a/src/app/projects/containers/details/details.container.html
+++ b/src/app/projects/containers/details/details.container.html
@@ -1,3 +1,9 @@
+<button mat-stroked-button *ngIf="!editMode" (click)="toggleEditMode()">Edit Mode</button>
+<div *ngIf="editMode">
+  <button mat-stroked-button (click)="toggleEditMode()">Cancel</button>
+  <button mat-stroked-button color="primary">Save</button>
+</div>
+
 <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px">
   <ci-project-details fxFlex [(project)]="project" [inEditMode]="editMode"></ci-project-details>
   <ci-commands-configurator fxFlex [project]="project" [inEditMode]="editMode" #commandsConfigurator></ci-commands-configurator>
