Add todo in components

--- a/src/app/commands/components/commands-configurator/commands-configurator.component.html
+++ b/src/app/commands/components/commands-configurator/commands-configurator.component.html
@@ -5,6 +5,10 @@
   </mat-card-title>
 
   <mat-card-content>
-
+    <ul>
+      <li>Read only inputs when inEditMode === false</li>
+      <li>One command input by default</li>
+      <li>+ button to dynamically add command input</li>
+    </ul>
   </mat-card-content>
 </mat-card>
