--- a/src/app/notifications/components/notifications-configurator/notifications-configurator.component.html
+++ b/src/app/notifications/components/notifications-configurator/notifications-configurator.component.html
@@ -5,6 +5,13 @@
   </mat-card-title>
 
   <mat-card-content>
-
+    <ul>
+      <li>Read only inputs when inEditMode === false</li>
+      <li>Enable/Disable email & api notifications for this project</li>
+      <li>One email input by default</li>
+      <li>+ button to dynamically add email input</li>
+      <li>Check email string format before save</li>
+      <li>Notifications by email Configuration Tab + Notifications by API (Teams or Slack or Discord) Configuration Tab</li>
+    </ul>
   </mat-card-content>
 </mat-card>
