--- a/src/app/scheduler/components/scheduler-configurator/scheduler-configurator.component.html
+++ b/src/app/scheduler/components/scheduler-configurator/scheduler-configurator.component.html
@@ -5,6 +5,10 @@
   </mat-card-title>
 
   <mat-card-content>
-
+    <ul>
+      <li>Read only inputs when inEditMode === false</li>
+      <li>Enable/disable scheduler configuration</li>
+      <li>Add cron expression or scheduled times list (use external library if needed)</li>
+    </ul>
   </mat-card-content>
 </mat-card>
