Add info to build container & project details / add icons / remove footer

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -23,7 +23,7 @@
       <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
         <ul fxLayout fxLayoutGap="20px" class="navigation-items">
           <li>
-            <a>
+            <a routerLink="/projects">
               <mat-icon class="icon">home</mat-icon>
               <span class="label">Home</span>
             </a>
