--- a/src/app/projects/components/project-details/project-details.component.html
+++ b/src/app/projects/components/project-details/project-details.component.html
@@ -5,6 +5,13 @@
   </mat-card-title>
 
   <mat-card-content>
-
+    <ul>
+      <li>Read only inputs when inEditMode === false</li>
+      <li>Project name, description</li>
+      <li>Repository url / username / password / apiKey</li>
+      <li>Managed branches list</li>
+      <li>Dockerfile Location</li>
+      <li>Delete button only on editMode</li>
+    </ul>
   </mat-card-content>
 </mat-card>
